Not working drag

--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,9 @@
       <button class="bg-primary-color hover:bg-red-500 text-white font-bold py-2 px-4 rounded-full mx-50 focus:outline-none active: outline-none transition-color duration-500" onclick="removeLastData(0)">-</button>
     </div>     
     <div id="container" class="flex space-x-4 absolute bottom-16 left-12">
-      <div id="tasksDone0" class="scrollbar bg-primary-color bottom-box"></div>
-      <div id="tasksDone1" class="scrollbar bg-primary-color bottom-box"></div>
-      <div id="tasksDone2" class="scrollbar bg-primary-color bottom-box"></div>
+      <div id="tasksDone0" class="scrollbar bg-primary-color bottom-box dragover"></div>
+      <div id="tasksDone1" class="scrollbar bg-primary-color bottom-box dragover"></div>
+      <div id="tasksDone2" class="scrollbar bg-primary-color bottom-box dragover"></div>
     </div>
   </body>
 </html>
